--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+<meta http-equiv="refresh" content="0; url=pages/index.html">
+
+</head>
 <h2>Not the right page! </h2>
+
 </html>
