fixe support ref and remove hugh/alexander

--- a/pages/about.html
+++ b/pages/about.html
@@ -64,7 +64,7 @@
         <ul class="nav nav-pills pull-right">
           <li ><a href="index.html">Home</a></li>
           <li class="active"><a href="#">About</a></li>
-          <li><a href="http://support.pinetreesw.com">Support</a></li>
+          <li><a href="http://pinetreesw.uservoice.com">Support</a></li>
         </ul>
         <h3 class="muted">PineTree Software</h3>
       </div>
@@ -74,32 +74,10 @@
       <img src="../assets/img/PineTreeSoftIcon.png" alt="PineTreeSoftIcon" width="125" height="125">
         <h1>PineTree Software</h1>
         <p class="lead">We are strong believers in the fact that handcrafted code is better than manufactured code.
-We want to make the world a better place, one step at a time. Pine Tree Software is a father-son company comprised of: </p>
+We want to make the world a better place, one step at a time. PineTree Software is a father-son company comprised of Hugh and Alexander Mackworth.
       </div>
 
-      <!-- Example row of columns -->
-     <div class="row-fluid marketing">
-         <div class="span6">
-          <h2>Alexander</h2>
-          <p>Alexander Mackworth is a 13-year-old developer,
-and can speak Ruby, Javascript, CSS3, HTML5, Objective-C and Spanish
-fluently. He is the in-house web developer + piano player + goofing-off official. You can find him on <a href="https://github.com/alexanderpine">  github </a> and <a href="http://ahmblog.tumblr.com/">  tumblr </a> .	
- </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="span6">
-          <h2>Hugh</h2>
-          <p>Hugh Mackworth is Managing Partner at SmartForest Ventures. Formerly served as founding
-CEO of Digimarc Corporation (NASDAQ:DMRC), since named Oregon's fastest growing company. Before relocating from the 
-Silicon Valley, Hugh worked with GammaLink,
-a computer-based fax startup, was a marketing executive at 3Com Corporation,
-and worked in engineering, marketing and finance
-for Apple Computer before it went public. His academic background
-includes a BA in computer studies and an MBA,
-both from Stanford University.  </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-
+  
       <hr>
 
       <footer>
