--- a/pages/index.html
+++ b/pages/index.html
@@ -70,7 +70,7 @@
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="http://support.pinetreesw.com">Support</a></li>
+          <li><a href="http://pinetreesw.uservoice.com">Support</a></li>
         </ul>
         <h3 class="muted">Ultimate Stopwatch</h3>
       </div>
