adding refs to alexander and hugh pages

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta http-equiv="refresh" content="0; url=pages/index.html">
+<meta http-equiv="refresh" content="0; URL='pages/index.html'">
 
 </head>
-<h2>Not the right page! </h2>
-
+<h2>This page has moved</h2>
+<p>It's now <a href="pages/index.html">here</a></p>"
 </html>
