--- a/pages/index.html
+++ b/pages/index.html
@@ -84,7 +84,7 @@
 Designed for iOS7. 
 </p>
       <h4>   Simple to use, but powerful enough to handle a heavy workload.</h4>
-       <a class="btn btn-large btn-success" href="https://itunes.apple.com/us/app/ultimate-stopwatch/id502096113?ls=1&mt=8">Download today</a>
+       <a class="btn btn-large btn-success" href="https://itunes.apple.com/us/app/ultimate-stopwatch/id502096113?ls=1&amp;mt=8">Download today</a>
       <br>
       
       </div>
@@ -134,7 +134,7 @@ Designed for iOS7.
 <li>Add, sort, or delete watches, even while race is ongoing</li>
 <li>Correct any timing mistakes by easily changing any time for any watch or lap,</li>
 <li>Undo any mistakes throughout the app (such as on a false start or hitting the wrong lap button: just shake and accept the undo)</li>
-<ul>
+</ul>
 
           </div>
       </div>
