--- a/pages/about.html
+++ b/pages/about.html
@@ -74,7 +74,7 @@
       <img src="../assets/img/PineTreeSoftIcon.png" alt="PineTreeSoftIcon" width="125" height="125">
         <h1>PineTree Software</h1>
         <p class="lead">We are strong believers in the fact that handcrafted code is better than manufactured code.
-We want to make the world a better place, one step at a time. PineTree Software is a father-son company comprised of <a href= http://alexandermackworth.com>Alexander</a> and <a href= "https://www.vizify.com/hugh-mackworth">Hugh Mackworth</a>.</p>></center>
+We want to make the world a better place, one step at a time. PineTree Software is a father-son company comprised of <a href= http://alexandermackworth.com>Alexander</a> and <a href= "https://www.vizify.com/hugh-mackworth">Hugh Mackworth</a>.</p></center>
       </div>
 
   
