--- a/pages/index.html
+++ b/pages/index.html
@@ -70,7 +70,7 @@
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="http://pinetreesw.uservoice.com">Support</a></li>
+          <li><a href="http://support.pinetreesw.com">Support</a></li>
         </ul>
         <h3 class="muted">Ultimate Stopwatch</h3>
       </div>
@@ -84,7 +84,7 @@
 Designed for iOS7. 
 </p>
       <h4>   Simple to use, but powerful enough to handle a heavy workload.</h4>
-       <a class="btn btn-large btn-success" href="https://itunes.apple.com/us/app/ultimate-stopwatch/id502096113?ls=1&amp;mt=8">Download today</a>
+       <a class="btn btn-large btn-success" href="https://itunes.apple.com/us/app/ultimate-stopwatch/id502096113?ls=1&mt=8">Download today</a>
       <br>
       
       </div>
@@ -134,7 +134,7 @@ Designed for iOS7.
 <li>Add, sort, or delete watches, even while race is ongoing</li>
 <li>Correct any timing mistakes by easily changing any time for any watch or lap,</li>
 <li>Undo any mistakes throughout the app (such as on a false start or hitting the wrong lap button: just shake and accept the undo)</li>
-</ul>
+<ul>
 
           </div>
       </div>
@@ -142,7 +142,7 @@ Designed for iOS7.
       <hr>
 
       <div class="footer">
-        <p>&copy; PineTree Software 2013</p>
+        <p>&copy; PineTree Software 2015</p>
       </div>
 
     </div> <!-- /container -->
