--- a/pages/news.html
+++ b/pages/news.html
@@ -71,54 +71,53 @@
             <img src="../assets/ico/icon-72@2x.png"  alt="Watches Icon">
             <h2>Ultimate Stopwatch</h2>
             <p class="lead">Welcome to version 2.0.</p>
-            <h4>The Ultimate Stopwatch™ is a professional timing tool for the iPhone and iPad, providing multiple stopwatches for anyone who has to track a large number of events, especially coaches, trainers, or PE teachers. <br/> 
-                Simple to use, but powerful enough to handle a heavy workload.</h4>
+            <h5>The Ultimate Stopwatch 2.0 is a massive update involving almost all aspects of Watches. It provides a long list of new features requested by our users to make Watches better in real-world situations, as well as many fixes and enhancements. Although Watches has many new capabilities and options, it's still very easy to use.<br/> 
+                Simple to use, but powerful enough to handle a heavy workload.</h5>
          </div>
          <div class="row-fluid marketing">
             <div class="span6">
-               <h4>New Features 1</h4>
+               <h4>Better Race Starts:</h4>
                <ul>
-                  <li>Time an unlimited number of watches (with up to 90 visible at a time on an iPad) </li>
-                  <li>Track unlimited laps per watch (last 4 to 10 displayed, rest shown on reports)</li>
-                  <li>Track unlimited number of races, each named with location and any notes</li>
-                  <li>Have your Watches run all the time (independently of whether app is running or not); no power required when watches are not displayed on screen</li>
+                    <li>Enable a huge Start button</li>
+                    <li>Launch a group as a batch during a race</li>
+                    <li>Do a Staggered Start with fullscreen launch board</li>
+                    <li>Add a person to current race from their history</li>
+                    <li>Start a race without even looking with iPhone/iPad&#39;s volume control</li>
+                    <li>During race, use volume buttons to create an unassigned Lap (or Stop), and assign it later</li>
                </ul>
-               <h4>New Features 2</h4>
+               <h4>Better Device Support:</h4>
                <ul>
-                  <li>Edit built-in activity list to include whatever sports/events you track</li>
-                  <li>Control each watch separately, or use master start/stop/reset</li>
-                  <li>Choose from 17 different stopwatch formats (iPhone/iPad, bigger/smaller, more/less info shown)</li>
-                  <li>Switch at any time between split/cumulative display</li>
-                  <li>Control the fractions of a second to display (tenths, hundreds, thousandths)</li>
-               </ul>
-               <h4>New Features 3</h4>
-               <ul>
-                  <li>Organize your people into teams, classes, or groups</li>
-                  <li>Report for each person on what their races/times have been across all races</li>
-                  <li>Import people from your contacts, including photos and emails</li>
+                    <li>Optimized for all iOS8 and 9 devices (iPhone 4s up through iPad Pro)</li>
+                    <li>Use Split Screen Support (on compatible iPads)</li>
+                    <li>Humongous watch face to read at distance (for iPads)</li>
+                    <li>Force-push Peek and Pop to preview details and reports (on iPhone 6s &amp; 6s+)</li>
+                    <li>More popups (on iPad and larger iPhones)</li>
+                    <li>Restructured and easier Preferences with help Text</li>
                </ul>
             </div>
             <div class="span6">
-               <h4>New Features 4</h4>
+               <h4>Better Reporting:</h4>
                <ul>
-                  <li>Add notes to each race or even each person in a race</li>
-                  <li>Sort reports by time or by name</li>
-                  <li>Print reports or copy/paste into other applications</li>
-                  <li>Send reports via email to each person or to the whole group</li>
-                  <li>Track and report which type of activity was timed (even separately for each watch)</li>
-                  <li>Find a race by name or use the map to find it</li>
+                    <li>Dual-views in Landscape for People and Reports (on larger devices)</li>
+                    <li>Personal-Best tracking by race type</li>
+                    <li>Option to show both split and cumulative times simultaneously</li>
+                    <li>Separate splits-display and time-unit options for watches vs reports</li>
+                    <li>Locations now show up as text in reports rather than lat/long</li>
+                    <li>Runner&#39;s photos and Race-Type column in HTML report</li>
+                    <li>Choice of CSV, HTML, or text exports</li>
+                    <li>Include seconds in date in CSV and Text</li>
                </ul>
-               <h4>New Features 5</h4>
+               <h4>Better Editing:</h4>
                <ul>
-                  <li>Load a race for a whole group in a single click </li>
-                  <li>Auto-sort watches: as each person completes a lap, they drop to the bottom of the active list, thus it’s easier to find them in a large group</li>
-                  <li>Or manually drag watches into whatever order you like</li>
-                  <li>Track photos for each person to help identify during a large group run</li>
-                  <li>Add, sort, or delete watches, even while race is ongoing</li>
-                  <li>Correct any timing mistakes by easily changing any time for any watch or lap,</li>
-                  <li>Undo any mistakes throughout the app (such as on a false start or hitting the wrong lap button: just shake and accept the undo)</li>
+                    <li>Add a lap while editing a Watch</li>
+                    <li>Make notes on people across all races</li>
+                    <li>While editing a watch, choose from existing runners to merge</li>
+                    <li>Edit current Race Info and any historic races as well</li>
+                    <li>Specify default Activity Types</li>
                </ul>
             </div>
+                        <h5>We hope 2.0 works well for you.  If it does, there's nothing better than a good review (see the menus), ... or buying the ad-removing upgrade (see the menus)! If not, let us know at our support site (also in the menu) how we can help!</h5>
+
          </div>
          <hr>
          <div class="footer">
