--- a/pages/news.html
+++ b/pages/news.html
@@ -70,60 +70,61 @@
          <div class="jumbotron">
             <img src="../assets/ico/icon-72@2x.png"  alt="Watches Icon">
             <h2>Ultimate Stopwatch</h2>
-            <p class="lead">Welcome to version 2.0.</p>
-            <h5>The Ultimate Stopwatch 2.0 is a massive update involving almost all aspects of Watches. It provides a long list of new features requested by our users to make Watches better in real-world situations, as well as many fixes and enhancements. Although Watches has many new capabilities and options, it's still very easy to use.<br/> 
+            <p class="lead">Welcome to Ultimate Stopwatch version 2.0.</p>
+            <h5>A long time coming, 2.0 is a massive update, providing a long list of new features requested by our users to make Watches better in real-world situations, as well as many fixes and enhancements. <br/>Although Watches has many new capabilities and options, it's still very easy to use.<br/> 
                 Simple to use, but powerful enough to handle a heavy workload.</h5>
          </div>
          <div class="row-fluid marketing">
             <div class="span6">
                <h4>Better Race Starts:</h4>
                <ul>
-                    <li>Enable a huge Start button</li>
+                    <li>New Staggered Start to spread out runners 
+                    <li>Launch each runner on fullscreen Launch Board</li>
+                    <li>Start easier with a new, huge Start button</li>
+                    <li>Start a race without looking; just hit Up Volume</li>
                     <li>Launch a group as a batch during a race</li>
-                    <li>Do a Staggered Start with fullscreen launch board</li>
                     <li>Add a person to current race from their history</li>
-                    <li>Start a race without even looking with iPhone/iPad&#39;s volume control</li>
-                    <li>During race, use volume buttons to create an unassigned Lap (or Stop), and assign it later</li>
+                    <li>During race, use Volume to create an unassigned Lap (or Stop) to assign later</li>
                </ul>
                <h4>Better Device Support:</h4>
                <ul>
-                    <li>Optimized for all iOS8 and 9 devices (iPhone 4s up through iPad Pro)</li>
+                    <li>Optimized for iOS8/9 devices: 4s to iPad Pro</li>
                     <li>Use Split Screen Support (on compatible iPads)</li>
-                    <li>Humongous watch face to read at distance (for iPads)</li>
-                    <li>Force-push Peek and Pop to preview details and reports (on iPhone 6s &amp; 6s+)</li>
+                    <li>Humongous watch face  (for iPads)</li>
+                    <li>Force-push Peek and Pop (6s &amp; 6s+)</li>
                     <li>More popups (on iPad and larger iPhones)</li>
-                    <li>Restructured and easier Preferences with help Text</li>
+                    <li>Restructured Preferences with help text</li>
                </ul>
             </div>
             <div class="span6">
                <h4>Better Reporting:</h4>
                <ul>
-                    <li>Dual-views in Landscape for People and Reports (on larger devices)</li>
-                    <li>Personal-Best tracking by race type</li>
-                    <li>Option to show both split and cumulative times simultaneously</li>
-                    <li>Separate splits-display and time-unit options for watches vs reports</li>
-                    <li>Locations now show up as text in reports rather than lat/long</li>
-                    <li>Runner&#39;s photos and Race-Type column in HTML report</li>
-                    <li>Choice of CSV, HTML, or text exports</li>
-                    <li>Include seconds in date in CSV and Text</li>
+                    <li>Split-views in Landscape for People and Reports</li>
+                    <li>Tracks Personal-Best by race type</li>
+                    <li>Shows both split & cumulative laps at same time</li>
+                    <li>Choose lap-display and time-units for reports</li>
+                    <li>Shows locations as text (vs lat/long)</li>
+                    <li>Adds runner&#39;s photos & Race-Types to reports</li>
+                    <li>Choose CSV, HTML, or text exports</li>
+                    <li>Search for Races by name</li>
                </ul>
                <h4>Better Editing:</h4>
                <ul>
-                    <li>Add a lap while editing a Watch</li>
+                    <li>Add/delete laps while editings a Watch</li>
+                    <li>Choose from existing runners to combine a Watch</li>
                     <li>Make notes on people across all races</li>
-                    <li>While editing a watch, choose from existing runners to merge</li>
-                    <li>Edit current Race Info and any historic races as well</li>
+                    <li>Edit current or historic Race Info </li>
                     <li>Specify default Activity Types</li>
                </ul>
             </div>
-                        <h5>We hope 2.0 works well for you.  If it does, there's nothing better than a good review (see the menus), ... or buying the ad-removing upgrade (see the menus)! If not, let us know at our support site (also in the menu) how we can help!</h5>
+            </div>
+            <h5>We hope 2.0 works well for you.  If it does, there's nothing that'll say it better than a good review on iTunes (see Watches' menu), ... or buying the ad-removing upgrade (also in the menu). If not, let us know how we can help at our support site (guess where!).</h5>
 
          </div>
          <hr>
          <div class="footer">
             <p>&copy; PineTree Software 2015</p>
          </div>
-      </div>
       <!-- /container -->
       <!-- Le javascript
          ================================================== -->
