Fix typo in autosort announcement

--- a/pages/news.html
+++ b/pages/news.html
@@ -69,8 +69,8 @@
          <hr>
          <div class="jumbotron">
             <img src="../assets/ico/icon-72@2x.png"  alt="Watches Icon">
-            <h2>Watches and iOS10</h2>
-            <div class="marketing">Unfortunately, the release version of iOS 10 has completely broken the Auto-Sort feature in Watches. Please turn off this feature; see "Menu > Settings > Auto-Sort Watches". A fix will be coming soon.</div>
+            <h2>Watches and iOS 10</h2>
+            <div class="marketing">Unfortunately, the release version of iOS 10 has completely broken the Auto-Sort feature in Watches. <br/><br/>Please turn off this feature; see "Menu > Settings > Auto-Sort Watches". <br/><br/>A fix will be coming soon.</div>
          </div>
          <hr>
          <div class="footer">
