--- a/pages/news.html
+++ b/pages/news.html
@@ -71,7 +71,7 @@
             <img src="../assets/ico/icon-72@2x.png"  alt="Watches Icon">
             <h2>Ultimate Stopwatch</h2>
             <p class="lead">Welcome to Ultimate Stopwatch version 2.0.</p>
-            <div class="body">Note: Version 2.0.3 has fixed Auto-Sort under iOS 10. <br/>However, as always, if you notice any other issues, please let us know through the Help menu</div>
+            <div class="body">Note: Version 2.0.3 has fixed Auto-Sort under iOS 10. Please update if you haven't already. <br/>As always, if you notice any other issues, please let us know through the Help menu</div>
             <h5>Version 2.0 is a major update with a long list of new features requested by our users to make Watches better in real-world situations. Although Watches has many new capabilities and options, it should still bevery easy to use.<br/> 
                 Simple to use, but powerful enough to handle very complex needs.</h5>
          </div>
