Update to sync github

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
       <meta name="author" content="Hugh Mackworth">
       <!-- Le styles -->
       <link href="../assets/css/bootstrap.css" rel="stylesheet">
-      <style type="text/css">
+      <style>
          body {
          padding-top: 20px;
          padding-bottom: 40px;
@@ -61,7 +61,9 @@
             <ul class="nav nav-pills pull-right">
                <li class="active"><a href="#">Home</a></li>
                <li><a href="about.html">About</a></li>
-               <li><a href="http://pinetreesw.uservoice.com">Support</a></li>
+               <li><a href="news.html">News</a></li>
+               <li><a href="https://pinetreesw.uservoice.com">Support</a></li>
+               <li><a href="Privacy.html">Privacy</a></li>
             </ul>
             <h3 class="muted">Ultimate Stopwatch</h3>
          </div>
@@ -79,17 +81,17 @@
             <div class="span6">
                <h4>No Limits</h4>
                <ul>
-                  <li>Time an unlimited number of watches (with up to 90 visible at a time on an iPad) </li>
-                  <li>Track unlimited laps per watch (last 4 to 10 displayed, rest shown on reports)</li>
+                  <li>Time an unlimited number of watches (with an incredible 180 displayed at once on an iPad Pro!) </li>
+                  <li>Track unlimited laps per watch (last 4 to 10 displayed, depending on watch "face" used)</li>
                   <li>Track unlimited number of races, each named with location and any notes</li>
-                  <li>Have your Watches run all the time (independently of whether app is running or not); no power required when watches are not displayed on screen</li>
+                  <li>Have your Watches run all the time (independently of whether app is running or not); no power used when watches are not displayed on screen</li>
                </ul>
                <h4>Complete control</h4>
                <ul>
                   <li>Edit built-in activity list to include whatever sports/events you track</li>
                   <li>Control each watch separately, or use master start/stop/reset</li>
-                  <li>Choose from 17 different stopwatch formats (iPhone/iPad, bigger/smaller, more/less info shown)</li>
-                  <li>Switch at any time between split/cumulative display</li>
+                  <li>Choose from 25 different stopwatch formats (iPhone/iPad, bigger/smaller, more/less info shown)</li>
+                  <li>Switch at any time between split/cumulative display, or even both!</li>
                   <li>Control the fractions of a second to display (tenths, hundreds, thousandths)</li>
                </ul>
                <h4>Unlimited People</h4>
@@ -97,6 +99,7 @@
                   <li>Organize your people into teams, classes, or groups</li>
                   <li>Report for each person on what their races/times have been across all races</li>
                   <li>Import people from your contacts, including photos and emails</li>
+                  <li>Track personal best for each kind of race for each person</li>
                </ul>
             </div>
             <div class="span6">
@@ -104,26 +107,31 @@
                <ul>
                   <li>Add notes to each race or even each person in a race</li>
                   <li>Sort reports by time or by name</li>
-                  <li>Print reports or copy/paste into other applications</li>
+                  <li>Print reports or copy/paste into other applications, or export as CSV</li>
                   <li>Send reports via email to each person or to the whole group</li>
                   <li>Track and report which type of activity was timed (even separately for each watch)</li>
-                  <li>Find a race by name or use the map to find it</li>
+                  <li>Find a race by name, or use the map to find it by location</li>
+                  <li>Set time display units and split options for reports separately from watches</li>
                </ul>
                <h4>Easy to use</h4>
                <ul>
-                  <li>Load a race for a whole group in a single click </li>
-                  <li>Auto-sort watches: as each person completes a lap, they drop to the bottom of the active list, thus it’s easier to find them in a large group</li>
+                  <li>Launch a race without even looking, using the volume button</li>
+                  <li>Not sure who's coming in? Save a temporary Lap or Stop and assign it later</li>
+                  <li>Load a race for a whole group in a single tap with a huge start button </li>
+                  <li>Auto-sort watches: as each person completes a lap, they drop to the bottom, so next lap they're easy to find.</li>
                   <li>Or manually drag watches into whatever order you like</li>
                   <li>Track photos for each person to help identify during a large group run</li>
                   <li>Add, sort, or delete watches, even while race is ongoing</li>
-                  <li>Correct any timing mistakes by easily changing any time for any watch or lap,</li>
+                  <li>Correct timing mistakes by easily editing any time for any watch or lap</li>
                   <li>Undo any mistakes throughout the app (such as on a false start or hitting the wrong lap button: just shake and accept the undo)</li>
+                  <li>Use Staggered starts to automatically spread out your runners over time, or launch a new group all at once</li>
+                  <li>Full Screen launch board so each runner knows when to go</li>
                </ul>
             </div>
          </div>
          <hr>
          <div class="footer">
-            <p>&copy; PineTree Software 2015</p>
+            <p>&copy; PineTree Software 2019</p>
          </div>
       </div>
       <!-- /container -->
