--- a/pages/news iOS10 OK.html
+++ b/pages/news iOS10 OK.html
@@ -8,7 +8,7 @@
       <meta name="author" content="Hugh Mackworth">
       <!-- Le styles -->
       <link href="../assets/css/bootstrap.css" rel="stylesheet">
-      <style type="text/css">
+      <style>
          body {
          padding-top: 20px;
          padding-bottom: 40px;
@@ -71,8 +71,9 @@
             <img src="../assets/ico/icon-72@2x.png"  alt="Watches Icon">
             <h2>Ultimate Stopwatch</h2>
             <p class="lead">Welcome to Ultimate Stopwatch version 2.0.</p>
-            <h5>A long time coming, 2.0 is a massive update, providing a long list of new features requested by our users to make Watches better in real-world situations, as well as many fixes and enhancements. <br/>Although Watches has many new capabilities and options, it's still very easy to use.<br/> 
-                Simple to use, but powerful enough to handle a heavy workload.</h5>
+            <div class="body">Note: Version 2.0.3 has fixed Auto-Sort under iOS 10. Please update if you haven't already. <br/>As always, if you notice any other issues, please let us know through the Help menu</div>
+            <h5>Version 2.0 is a major update with a long list of new features requested by our users to make Watches better in real-world situations. Although Watches has many new capabilities and options, it should still bevery easy to use.<br/> 
+                Simple to use, but powerful enough to handle very complex needs.</h5>
          </div>
          <div class="row-fluid marketing">
             <div class="span6">
@@ -123,7 +124,7 @@
          </div>
          <hr>
          <div class="footer">
-            <p>&copy; PineTree Software 2015</p>
+            <p>&copy; PineTree Software 2019</p>
          </div>
       <!-- /container -->
       <!-- Le javascript
