--- a/pages/news.html
+++ b/pages/news.html
@@ -8,7 +8,7 @@
       <meta name="author" content="Hugh Mackworth">
       <!-- Le styles -->
       <link href="../assets/css/bootstrap.css" rel="stylesheet">
-      <style type="text/css">
+      <style>
          body {
          padding-top: 20px;
          padding-bottom: 40px;
@@ -63,6 +63,7 @@
                <li><a href="about.html">About</a></li>
                <li class="active"><a href="#">News</a></li>
                <li><a href="http://pinetreesw.uservoice.com">Support</a></li>
+               <li><a href="Privacy.html">Privacy</a></li>
             </ul>
             <h3 class="muted">Ultimate Stopwatch</h3>
          </div>
@@ -70,26 +71,27 @@
          <div class="jumbotron">
             <img src="../assets/ico/icon-72@2x.png"  alt="Watches Icon">
             <h2>Ultimate Stopwatch</h2>
-            <p class="lead">Welcome to Ultimate Stopwatch version 2.0.</p>
-            <div class="body">Note: Version 2.0.3 has fixed Auto-Sort under iOS 10. Please update if you haven't already. <br/>As always, if you notice any other issues, please let us know through the Help menu</div>
-            <h5>Version 2.0 is a major update with a long list of new features requested by our users to make Watches better in real-world situations. Although Watches has many new capabilities and options, it should still bevery easy to use.<br/> 
-                Simple to use, but powerful enough to handle very complex needs.</h5>
+            <p class="lead">Welcome to Ultimate Stopwatch version 2.6.</p>
+            <h5>Version 2.6 is a major update with a long list of new features requested by our users <br>
+                to make Watches better in real-world situations.<br/> 
+                Simple to use, but powerful enough to handle your most complex needs.</h5>
          </div>
          <div class="row-fluid marketing">
             <div class="span6">
                <h4>Better Race Starts:</h4>
                <ul>
-                    <li>New Staggered Start to spread out runners 
+                    <li>New Staggered Start to spread out runners </li>
                     <li>Launch each runner on fullscreen Launch Board</li>
                     <li>Start easier with a new, huge Start button</li>
                     <li>Start a race without looking; just hit Up Volume</li>
                     <li>Launch a group as a batch during a race</li>
                     <li>Add a person to current race from their history</li>
+                    <li>Interval race support (Run, pause, run again ...)</li>
                     <li>During race, use Volume to create an unassigned Lap (or Stop) to assign later</li>
                </ul>
                <h4>Better Device Support:</h4>
                <ul>
-                    <li>Optimized for iOS8/9 devices: 4s to iPad Pro</li>
+                    <li>Optimized for iOS devices: from the 4s to iPad Pro</li>
                     <li>Use Split Screen Support (on compatible iPads)</li>
                     <li>Humongous watch face  (for iPads)</li>
                     <li>Force-push Peek and Pop (6s &amp; 6s+)</li>
@@ -104,6 +106,8 @@
                     <li>Tracks Personal-Best by race type</li>
                     <li>Shows both split & cumulative laps at same time</li>
                     <li>Choose lap-display and time-units for reports</li>
+                    <li>Graph individual's progress over time</li>
+                    <li>Graph a race's results</li>
                     <li>Shows locations as text (vs lat/long)</li>
                     <li>Adds runner&#39;s photos & Race-Types to reports</li>
                     <li>Choose CSV, HTML, or text exports</li>
@@ -111,7 +115,7 @@
                </ul>
                <h4>Better Editing:</h4>
                <ul>
-                    <li>Add/delete laps while editings a Watch</li>
+                    <li>Add/delete laps while editing a Watch</li>
                     <li>Choose from existing runners to combine a Watch</li>
                     <li>Make notes on people across all races</li>
                     <li>Edit current or historic Race Info </li>
@@ -119,12 +123,12 @@
                </ul>
             </div>
             </div>
-            <h5>We hope 2.0 works well for you.  If it does, there's nothing that'll say it better than a good review on iTunes (see Watches' menu), ... or buying the ad-removing upgrade (also in the menu). If not, let us know how we can help at our support site (guess where!).</h5>
+            <h5>We hope 2.6 works well for you.  If it does, there's nothing that'll say it better than a good review on iTunes (see Watches' menu). If not, let us know how we can help at our support site (guess where!).</h5>
 
          </div>
          <hr>
          <div class="footer">
-            <p>&copy; PineTree Software 2015</p>
+            <p>&copy; PineTree Software 2019</p>
          </div>
       <!-- /container -->
       <!-- Le javascript
@@ -148,3 +152,4 @@
          -->
    </body>
 </html>
+
