--- a/testVimeo.html
+++ b/testVimeo.html
@@ -1,8 +1,11 @@
-<html>
-<head></head>
-<body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+      <title> Testing Vimeo </title>
         Video:<br>
-        <video width="320" height="180"  webkit-playsinline="webkit-playsinline" preload="none" controls="">
-        <source src="http://player.vimeo.com/external/98974899.mobile.mp4?s=fcb048e09d6d4f591308f12e09013225">
-      </video>
+        <div id=​98974899 class="inline-video">​
+            <video width="320" height="180" poster="assets/img/pineTreeSoftIcon.png" webkit-playsinline="webkit-playsinline" preload="none" controls="">
+                  <source src="http://player.vimeo.com/external/98974899.mobile.mp4?s=fcb048e09d6d4f591308f12e09013225">
+            </video>
+      </div>
 </body>
