--- a/testVimeo.html
+++ b/testVimeo.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-      <title> Testing Vimeo </title>
+<head><title>Test Vimeo</title></head>
+<body>
         Video:<br>
-        <div id=​98974899 class="inline-video">​
-            <video width="320" height="180" poster="assets/img/PineTreeSoftIcon.png" webkit-playsinline="webkit-playsinline" preload="none" controls="">
-                  <source src="http://player.vimeo.com/external/98974899.mobile.mp4?s=fcb048e09d6d4f591308f12e09013225">
-            </video>
-      </div>
+        <video width="320" height="180"  playsinline="playsinline" preload="none" controls="">
+        <source src="http://player.vimeo.com/external/98974899.mobile.mp4?s=fcb048e09d6d4f591308f12e09013225">
+      </video>
 </body>
