--- a/pages/websites.html
+++ b/pages/websites.html
@@ -36,6 +36,10 @@
     max-width: 760px;
     margin: auto;
 }
+.recipe-names {
+    columns: 2;
+    margin: auto;
+}
 .support-options li{
   background-color:#2da9e1;
     border-radius:4px;
@@ -129,15 +133,13 @@
         </div>
     </section>
     
-<!-- Recipe WebSites -->
+<!-- Recipe Websites -->
         
     <div class="websites">
     <span class="anchor" id="websites"></span>
-    <section>
-        <div class="copy-wrap">
             <h3>Famous sites</h3>
+        <div class="recipe-names">
              <ul>
-            <li><a href="https://www.abcnews.go.com/gma/recipes">Good Morning America</a></li>
             <li><a href="https://www.allrecipes.com">All Recipes</a></li>
             <li><a href="https://www.americastestkitchen.com">America's Test Kitchen</a></li>
             <li><a href="https://www.bbc.co.uk/food/">BBC Food</a></li>
@@ -145,8 +147,7 @@
             <li><a href="https://www.bigoven.com">Big Oven</a></li>
             <li><a href="https://www.bonappetit.com">Bon Appetit</a></li>
             <li><a href="https://www.chowhound.com">Chowhound</a></li>
-            <li><a href="https://www.cooking.nytimes.com">New York Times</a></li>
-            <li><a href="https://www.cookpad.com">cookpad</a></li>
+            <li><a href="https://www.cookpad.com">Cookpad</a></li>
             <li><a href="https://www.cooks.com">Cooks.com</a></li>
             <li><a href="https://www.americastestkitchen.com/cookscountry">Cook's Country</a></li>
             <li><a href="https://www.americastestkitchen.com/cooksillustrated">Cook's Illustrated</a></li>
@@ -159,15 +160,19 @@
             <li><a href="https://www.food52.com">Food 52</a></li>
             <li><a href="https://www.foodandwine.com">Food & Wine</a></li>
             <li><a href="https://www.foodnetwork.com">Food Network</a></li>
+            <li><a href="https://www.abcnews.go.com/gma/recipes">Good Morning America</a></li>
             <li><a href="https://www.gourmet.com">Gourmet</a></li>
             <li><a href="https://www.insanelygoodrecipes.com">Insanely Good</a></li>
             <li><a href="https://www.jamieoliver.com">Jamie Oliver</a></li>
             <li><a href="https://www.joyofbaking.com">Joy of Baking</a></li>
             <li><a href="https://www.kingarthurflour.com">King Arthur Flour</a></li>
+            <li><a href="https://www.thekitchn.com">Kitchn</a></li>
             <li><a href="https://www.marthastewart.com">Martha Stewart</a></li>
             <li><a href="https://www.mygourmetconnection.com">My Gourmet Connection</a></li>
             <li><a href="https://www.myrecipes.com">My Recipes</a></li>
             <li><a href="https://www.natashaskitchen.com">Natasha's Kitchen</a></li>
+            <li><a href="https://www.cooking.nytimes.com">New York Times</a></li>
+            <li><a href="https://www.thepioneerwoman.com">The Pioneer Woman</a></li>
             <li><a href="https://www.rachaelray.com">Rachael Ray</a></li>
             <li><a href="https://www.recipe.com">Recipe.com</a></li>
             <li><a href="https://www.recipetineats.com">RecipeTinEats</a></li>
@@ -182,15 +187,12 @@
             <li><a href="https://www.tastesbetterfromscratch.com">Tastes Better From Scratch</a></li>
             <li><a href="https://www.tastingtable.com">TastingTable</a></li>
             <li><a href="https://www.tasty.co">Tasty</a></li>
-            <li><a href="https://www.thekitchn.com">Kitchn</a></li>
-            <li><a href="https://www.thepioneerwoman.com">The Pioneer Woman</a></li>
             <li><a href="https://www.thespruceeats.com">The Spruce Eats</a></li>
-            <li><a href="https://www.washingtonpost.com/pb/recipes">The Washington Post</a></li>
+            <li><a href="https://www.washingtonpost.com/pb/recipes">Washington Post</a></li>
             <li><a href="https://www.yummly.com/">Yummly</a></li>
           </ul>
                   	<!--END CONTENT-->
     	</div>
-    </section>
 </div>
 
         </div>
