--- a/pages/websites.html
+++ b/pages/websites.html
@@ -171,7 +171,7 @@
             <li><a href="https://www.mygourmetconnection.com">My Gourmet Connection</a></li>
             <li><a href="https://www.myrecipes.com">My Recipes</a></li>
             <li><a href="https://www.natashaskitchen.com">Natasha's Kitchen</a></li>
-            <li><a href="https://www.cooking.nytimes.com">New York Times</a></li>
+            <li><a href="https://cooking.nytimes.com">New York Times</a></li>
             <li><a href="https://www.thepioneerwoman.com">The Pioneer Woman</a></li>
             <li><a href="https://www.rachaelray.com">Rachael Ray</a></li>
             <li><a href="https://www.recipe.com">Recipe.com</a></li>
