--- a/pages/news-2.6.html
+++ b/pages/news-2.6.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="utf-8">
+      <meta charset="utf-8"/>
       <title>PineTree Software &middot; Watches Update</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Main page for Ultimate Stopwatch">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <meta name="description" content="Main page for Ultimate Stopwatch"/>
       <meta name="author" content="Hugh Mackworth">
       <!-- Le styles -->
       <link href="../assets/css/bootstrap.css" rel="stylesheet">
@@ -43,17 +43,17 @@
          margin-top: 28px;
          }
       </style>
-      <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
+      <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet"/>
       <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
       <!--[if lt IE 9]>
       <script src="../assets/js/html5shiv.js"></script>
       <![endif]-->
       <!-- Fav and touch icons -->
-      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/icon-72@2x.png">
-      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/icon@2x.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/icon-72.png">
+      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/icon-72@2x.png"/>
+      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/icon@2x.png"/>
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/icon-72.png"/>
       <link rel="apple-touch-icon-precomposed" href="../assets/ico/icon.png">
-      <link rel="shortcut icon" href="../assets/ico/favicon.png">
+      <link rel="shortcut icon" href="../assets/ico/favicon.png"/>
    </head>
    <body>
       <div class="container-narrow">
@@ -71,43 +71,64 @@
          <div class="jumbotron">
             <img src="../assets/ico/icon-72@2x.png"  alt="Watches Icon">
             <h2>Ultimate Stopwatch</h2>
-            <p class="lead">Welcome to Ultimate Stopwatch version 2.8.</p>
-            <h5>Watches 2.8 is a major update internally, but with relatively few visible changes. <br>
-                It takes advantage of many new iOS features: more compatible and better performing.<br>
+            <p class="lead">Welcome to Ultimate Stopwatch version 2.6.</p>
+            <h5>Version 2.6 is a major update with a long list of new features requested by our users <br>
+                to make Watches better in real-world situations.<br/> 
                 Simple to use, but powerful enough to handle your most complex needs.</h5>
          </div>
          <div class="row-fluid marketing">
             <div class="span6">
-               <h4>Some things to try:</h4>
+               <h4>Better Race Starts:</h4>
                <ul>
-                    <li>Staggered Start to spread out Runners with a full-screen Launch Board </li>
-                    <li>Huge Start button to make starting easier </li>
-                    <li>Batch launch a group during a Race</li>
-                    <li>Interval races (Run, pause, run again ...)</li>
-                    <li>Up Volume to start a Race without even looking</li>
-                    <li>Volume during Race to create an unassigned Lap (or Stop)</li>
+                    <li>New Staggered Start to spread out runners </li>
+                    <li>Launch each runner on fullscreen Launch Board</li>
+                    <li>Start easier with a new, huge Start button</li>
+                    <li>Start a race without looking; just hit Up Volume</li>
+                    <li>Launch a group as a batch during a race</li>
+                    <li>Add a person to current race from their history</li>
+                    <li>Interval race support (Run, pause, run again ...)</li>
+                    <li>During race, use Volume to create an unassigned Lap (or Stop) to assign later</li>
                </ul>
-            </div>
-            <div class="span6">
-               <h4>New features in 2.8.0</h4>
+               <h4>Better Device Support:</h4>
                <ul>
-                    <li>Increased spacing between watches</li>
-                    <li>Scale/crop circular photos with higher resolution</li>
-                    <li>Faces with larger photos to identify runners</li>
-                    <li>Edit a race's Date and Location</li>
-                    <li>Works on Macs as well</li>
+                    <li>Optimized for iOS devices: from the 4s to iPad Pro</li>
+                    <li>Use Split Screen Support (on compatible iPads)</li>
+                    <li>Humongous watch face  (for iPads)</li>
+                    <li>Force-push Peek and Pop (6s &amp; 6s+)</li>
+                    <li>More popups (on iPad and larger iPhones)</li>
                     <li>Restructured Preferences with help text</li>
                </ul>
             </div>
+            <div class="span6">
+               <h4>Better Reporting:</h4>
+               <ul>
+                    <li>Split-views in Landscape for People and Reports</li>
+                    <li>Tracks Personal-Best by race type</li>
+                    <li>Shows both split & cumulative laps at same time</li>
+                    <li>Choose lap-display and time-units for reports</li>
+                    <li>Graph individual's progress over time</li>
+                    <li>Graph a race's results</li>
+                    <li>Shows locations as text (vs lat/long)</li>
+                    <li>Adds runner&#39;s photos & Race-Types to reports</li>
+                    <li>Choose CSV, HTML, or text exports</li>
+                    <li>Search for Races by name</li>
+               </ul>
+               <h4>Better Editing:</h4>
+               <ul>
+                    <li>Add/delete laps while editing a Watch</li>
+                    <li>Choose from existing runners to combine a Watch</li>
+                    <li>Make notes on people across all races</li>
+                    <li>Edit current or historic Race Info </li>
+                    <li>Specify default Activity Types</li>
+               </ul>
             </div>
-            <h5>We hope 2.8 works well for you.  If it does, there's nothing that'll say it better than a good review on iTunes (see Watches' menu). If not, let us know how we can help at our support site (also in Watches menu!).<br>
-And if you'd like to beta-test upcoming versions (and influence future work), let us know <a href=" https://pinetreesw.uservoice.com/forums/223554-how-can-we-improve-watches/suggestions/47538554-sign-up-for-betas">here at our  support site. </a>
-</h5>
+            </div>
+            <h5>We hope 2.6 works well for you.  If it does, there's nothing that'll say it better than a good review on iTunes (see Watches' menu). If not, let us know how we can help at our support site (guess where!).</h5>
 
          </div>
          <hr>
          <div class="footer">
-            <p>&copy; PineTree Software 2023</p>
+            <p>&copy; PineTree Software 2020</p>
          </div>
       <!-- /container -->
       <!-- Le javascript
