Update for migration from UserVocie to FreshDesk

--- a/pages/about.html
+++ b/pages/about.html
@@ -65,7 +65,7 @@
                     <li ><a href="index.html">Home</a></li>
                     <li class="active"><a href="#">About</a></li>
                     <li><a href="news.html">News</a></li>
-                    <li><a href="https://pinetreesw.uservoice.com">Support</a></li>
+                    <li><a href="https://pinetreesoftware-help.freshdesk.com/support/home">Support</a></li>
                     <li><a href="Privacy.html">Privacy</a></li>
                 </ul>
                 <h3 class="muted">PineTree Software</h3>
@@ -82,7 +82,7 @@
             <hr>
             
             <footer>
-                <p>&copy; PineTree Software 2020</p>
+                <p>&copy; PineTree Software 2024</p>
             </footer>
             
         </div> <!-- /container -->
@@ -92,7 +92,7 @@
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="../assets/js/jquery.js"></script>
         <script src="../assets/js/bootstrap.js"></script>
-        <!--    
+        <!--
          <script src="../assets/js/bootstrap-transition.js"></script>
          <script src="../assets/js/bootstrap-alert.js"></script>
          <script src="../assets/js/bootstrap-modal.js"></script>
