--- a/pages/index.html
+++ b/pages/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="utf-8"/>
+      <meta charset="utf-8">
       <title>PineTree Software &middot; Watches</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <meta name="description" content="Main page for Ultimate Stopwatch"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="Main page for Ultimate Stopwatch">
       <meta name="author" content="Hugh Mackworth">
       <!-- Le styles -->
       <link href="../assets/css/bootstrap.css" rel="stylesheet">
@@ -43,17 +43,17 @@
          margin-top: 28px;
          }
       </style>
-      <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet"/>
+      <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
       <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
       <!--[if lt IE 9]>
       <script src="../assets/js/html5shiv.js"></script>
       <![endif]-->
       <!-- Fav and touch icons -->
-      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/icon-72@2x.png"/>
-      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/icon@2x.png"/>
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/icon-72.png"/>
+      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/icon-72@2x.png">
+      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/icon@2x.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/icon-72.png">
       <link rel="apple-touch-icon-precomposed" href="../assets/ico/icon.png">
-      <link rel="shortcut icon" href="../assets/ico/favicon.png"/>
+      <link rel="shortcut icon" href="../assets/ico/favicon.png">
    </head>
    <body>
       <div class="container-narrow">
@@ -62,7 +62,7 @@
                <li class="active"><a href="#">Home</a></li>
                <li><a href="about.html">About</a></li>
                <li><a href="news.html">News</a></li>
-               <li><a href="https://pinetreesw.uservoice.com">Support</a></li>
+               <li><a href="https://pinetreesoftware-help.freshdesk.com/support/home">Support</a></li>
                <li><a href="Privacy.html">Privacy</a></li>
             </ul>
             <h3 class="muted">Ultimate Stopwatch</h3>
@@ -131,7 +131,7 @@
          </div>
          <hr>
          <div class="footer">
-            <p>&copy; PineTree Software 2023</p>
+            <p>&copy; PineTree Software 2024</p>
          </div>
       </div>
       <!-- /container -->
