--- a/pages/news iOS10 OK.html
+++ b/pages/news iOS10 OK.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="utf-8"/>
+      <meta charset="utf-8">
       <title>PineTree Software &middot; Watches Update</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <meta name="description" content="Main page for Ultimate Stopwatch"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="Main page for Ultimate Stopwatch">
       <meta name="author" content="Hugh Mackworth">
       <!-- Le styles -->
       <link href="../assets/css/bootstrap.css" rel="stylesheet">
@@ -43,17 +43,17 @@
          margin-top: 28px;
          }
       </style>
-      <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet"/>
+      <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
       <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
       <!--[if lt IE 9]>
       <script src="../assets/js/html5shiv.js"></script>
       <![endif]-->
       <!-- Fav and touch icons -->
-      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/icon-72@2x.png"/>
-      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/icon@2x.png"/>
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/icon-72.png"/>
+      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/icon-72@2x.png">
+      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/icon@2x.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/icon-72.png">
       <link rel="apple-touch-icon-precomposed" href="../assets/ico/icon.png">
-      <link rel="shortcut icon" href="../assets/ico/favicon.png"/>
+      <link rel="shortcut icon" href="../assets/ico/favicon.png">
    </head>
    <body>
       <div class="container-narrow">
@@ -71,15 +71,15 @@
             <img src="../assets/ico/icon-72@2x.png"  alt="Watches Icon">
             <h2>Ultimate Stopwatch</h2>
             <p class="lead">Welcome to Ultimate Stopwatch version 2.0.</p>
-            <div class="body">Note: Version 2.0.3 has fixed Auto-Sort under iOS 10. Please update if you haven't already. <br/>As always, if you notice any other issues, please let us know through the Help menu</div>
-            <h5>Version 2.0 is a major update with a long list of new features requested by our users to make Watches better in real-world situations. Although Watches has many new capabilities and options, it should still bevery easy to use.<br/> 
+            <div class="body">Note: Version 2.0.3 has fixed Auto-Sort under iOS 10. Please update if you haven't already. <br>As always, if you notice any other issues, please let us know through the Help menu</div>
+            <h5>Version 2.0 is a major update with a long list of new features requested by our users to make Watches better in real-world situations. Although Watches has many new capabilities and options, it should still be very easy to use.<br>
                 Simple to use, but powerful enough to handle very complex needs.</h5>
          </div>
          <div class="row-fluid marketing">
             <div class="span6">
                <h4>Better Race Starts:</h4>
                <ul>
-                    <li>New Staggered Start to spread out runners 
+                    <li>New Staggered Start to spread out runners
                     <li>Launch each runner on fullscreen Launch Board</li>
                     <li>Start easier with a new, huge Start button</li>
                     <li>Start a race without looking; just hit Up Volume</li>
